--- a/steering-files/pom.xml
+++ b/steering-files/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>5.2-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <build>
     <resources>
