--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -13,7 +13,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
   <build>
     <defaultGoal>install</defaultGoal>
