--- a/record-util/pom.xml
+++ b/record-util/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
   <build>
     <plugins>
