Disable shade plugin from making dependency reduced pom

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -36,6 +36,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <createDependencyReducedPom>false</createDependencyReducedPom>
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>bin</shadedClassifierName>
               <transformers>
