--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>hps-plugin</artifactId>
   <name>plugin</name>
@@ -47,7 +49,8 @@
           <redirectUrls>
             <property>
               <name>https://srs.slac.stanford.edu/nexus/content/groups/lcsim-maven2-public/</name>
-              <value>https://srs.slac.stanford.edu/nexus/service/local/artifact/maven/redirect?r=lcsim-maven2-public</value>
+              <value>
+                https://srs.slac.stanford.edu/nexus/service/local/artifact/maven/redirect?r=lcsim-maven2-public</value>
             </property>
           </redirectUrls>
         </configuration>
@@ -87,7 +90,7 @@
     </dependency>
   </dependencies>
   <profiles>
-<!--
+    <!--
     <profile>
       <id>submit-plugin-descriptor</id>
       <activation>
