--- a/pom.xml
+++ b/pom.xml
@@ -356,6 +356,16 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.26</version>
+      </dependency>
+      <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.25.2</version>
+      </dependency>
       <!-- lcsim deps below here -->
       <dependency>
         <groupId>org.lcsim</groupId>
