--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
   <version>5.2-SNAPSHOT</version>
   <name>HPS Java</name>
   <description>HPS Java Maven Project</description>
-  <url>http://www.lcsim.org/sites/hps/</url>
+  <url>https://jeffersonlab.github.io/hps-java/</url>
 
   <properties>
     <javaVersion>1.8</javaVersion>
     <skipSite>false</skipSite>
-    <skipSiteDeploy>true</skipSiteDeploy>
     <skipPlugin>true</skipPlugin>
     <skipCheckstyle>true</skipCheckstyle>
     <lcsimVersion>4.4.0</lcsimVersion>
@@ -29,9 +28,9 @@
   </properties>
 
   <scm>
-    <url>git@github.com:JeremyMcCormick/hps-java.git</url>
+    <url>https://github.com/JeremyMcCormick/hps-java.git</url>
     <connection>scm:git:${project.scm.url}</connection>
-    <developerConnection>scm:git:${project.scm.url}</developerConnection>
+    <developerConnection>scm:git:git@github.com:JeremyMcCormick/hps-java.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -84,7 +83,7 @@
       <name>CODA</name>
       <url>https://coda.jlab.org/maven/</url>
     </repository>
-    <!-- Blacklist this repo -->
+    <!-- Start blacklisted repositories -->
     <repository>
       <id>glassfish-repo</id>
       <name>Glassfish repository</name>
@@ -96,6 +95,29 @@
         <enabled>false</enabled>
       </releases>
     </repository>
+    <repository>
+      <id>codehaus-repo</id>
+      <name>Codehaus Repository</name>
+      <url>http://repository.codehaus.org/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+    <repository>
+      <id>codehaus-snapshot-repo</id>
+      <name>Codehaus Repository</name>
+      <url>http://snapshots.repository.codehaus.org/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+    <!-- End blacklisted repositories -->
   </repositories>
 
   <pluginRepositories>
@@ -476,9 +498,6 @@
         <plugin>
           <artifactId>maven-scm-publish-plugin</artifactId>
           <version>3.2.1</version>
-          <configuration>
-            <scmBranch>gh-pages</scmBranch>
-          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
@@ -526,7 +545,6 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <scmCommentPrefix>[hps-release skip]</scmCommentPrefix>
@@ -542,10 +560,10 @@
         <artifactId>maven-scm-publish-plugin</artifactId>
         <configuration>
           <scmBranch>gh-pages</scmBranch>
+          <pubScmUrl>${project.scm.developerConnection}</pubScmUrl>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <useFile>false</useFile>
@@ -560,7 +578,6 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
@@ -626,7 +643,7 @@
           <generateSitemap>true</generateSitemap>
           <generateProjectInfo>true</generateProjectInfo>
           <skip>${skipSite}</skip>
-          <skipDeploy>${skipSiteDeploy}</skipDeploy>
+          <skipDeploy>${skipSite}</skipDeploy>
         </configuration>
       </plugin>
       <plugin>
@@ -639,9 +656,13 @@
           <reportSet>
             <id>non-aggregate</id>
             <reports>
+              <!--
               <report>dependencies</report>
+              -->
               <report>index</report>
+              <!--
               <report>scm</report>
+              -->
               <report>summary</report>
             </reports>
           </reportSet>
@@ -650,13 +671,19 @@
             <inherited>false</inherited>
             <reports>
               <report>ci-management</report>
+              <!--
               <report>dependency-convergence</report>
+              -->
               <report>index</report>
               <report>issue-management</report>
               <report>mailing-lists</report>
-              <report>modules</report>
+              <!--
+              <report>modules</report>              
               <report>plugin-management</report>
               <report>plugins</report>
+              -->
+              <report>scm</report>
+              <report>summary</report>
               <report>team</report>
             </reports>
           </reportSet>
@@ -670,10 +697,12 @@
         <reportSets>
           <reportSet>
             <id>non-aggregate</id>
+            <!--
             <reports>
               <report>jxr</report>
               <report>test-jxr</report>
             </reports>
+            -->
           </reportSet>
           <reportSet>
             <id>aggregate</id>
@@ -691,8 +720,10 @@
           <reportSet>
             <id>non-aggregate</id>
             <reports>
+              <!--
               <report>javadoc</report>
               <report>test-javadoc</report>
+              -->
             </reports>
           </reportSet>
           <reportSet>
@@ -700,6 +731,7 @@
             <inherited>false</inherited>
             <reports>
               <report>aggregate</report>
+              <report>test-aggregate</report>
             </reports>
           </reportSet>
         </reportSets>
@@ -708,7 +740,7 @@
           <show>private</show>
           <nohelp>true</nohelp>
           <author>true</author>
-          <detectLinks>false</detectLinks>
+          <detectLinks>true</detectLinks>
           <detectJavaApiLink>true</detectJavaApiLink>
           <failOnError>false</failOnError>
           <additionalparam>-Xdoclint:none</additionalparam>
