--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -57,7 +57,7 @@ jobs:
           echo "Email: ${{ steps.get_email.outputs.email }}"
 
       - name: Build site
-        run: mvn clean site
+        run: mvn clean site -q
 
       # Remove links to non-existent module sub-pages from the sidebar.
       - name: Fix page sidebars
@@ -66,5 +66,12 @@ jobs:
             sed -i -r '/<li class="nav-header">Modules<\/li>/,/<li class="nav-header">Project\sDocumentation<\/li>/d' $f
           done
 
-      - name: Publish site
-        run: mvn site:stage scm-publish:publish-scm -q
+      - name: Stage site
+        run: mvn site:stage 
+        
+      - name: Cleanup staged site
+        run: |
+          for d in $(ls -d target/staged/hps-*); do rm -rf $d; done
+
+      - name: Publish site 
+        run: mvn scm-publish:publish-scm
