--- a/online-monitoring/pom.xml
+++ b/online-monitoring/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4</version>
   </parent>
 
   <build>
