--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -16,7 +16,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.2</version>
   </parent>
 
   <build>
