--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.6</version>
   </parent>
 
   <dependencies>
