--- a/digi/pom.xml
+++ b/digi/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>0.0.6</version>
+    <version>5.2.0-SNAPSHOT</version>
   </parent>
 
   <dependencies>
