[hps-release skip] prepare for next development iteration

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.hps</groupId>
     <artifactId>hps-java</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>0.0.9720232</version>
+    <version>5.2.1-SNAPSHOT</version>
   </parent>
 
   <build>
