--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.tag }}
+          ref: hps-java-${{ inputs.tag }}
 
       - name: Validate tag
         run: |
