--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,6 @@ jobs:
 
       - name: Build and run tests
         run: |
-          mvn -B install #-T4
+          mvn -B install -T4
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN }}
